--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,14 +17,22 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/vite-plugin-svelte": "^2.0.3",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.9",
 		"@types/cookie": "^0.5.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
+		"svelte-check": "^3.1.0",
+		"svelte-preprocess": "^5.0.1",
+		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"typescript": "^4.9.5",
+		"vite": "^4.1.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@rollup/plugin-typescript": "^11.0.0"
+	}
 }
