--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -23,7 +23,8 @@
 		"@types/cookie": "^0.5.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
+		"sass": "^1.63.6",
+		"svelte": "^3.59.2",
 		"svelte-check": "^3.1.0",
 		"svelte-preprocess": "^5.0.1",
 		"tailwindcss": "^3.2.7",
