--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -16,6 +16,7 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-cloudflare": "^2.3.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@sveltejs/vite-plugin-svelte": "^2.0.3",
 		"@tailwindcss/forms": "^0.5.3",
