chore: updated node version

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -36,5 +36,9 @@
 	"type": "module",
 	"dependencies": {
 		"@rollup/plugin-typescript": "^11.0.0"
-	}
+	},
+
+	"engines": {
+		"node": "20.4.0"
+	  }
 }
