--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -35,10 +35,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@rollup/plugin-typescript": "^11.0.0"
+		"@rollup/plugin-typescript": "^11.0.0",
+		"tsparticles-slim": "^2.12.0"
 	},
-
 	"engines": {
 		"node": "20.4.0"
-	  }
+	}
 }
